Add local storage functionality; but bug with ids

--- a/index.html
+++ b/index.html
@@ -44,45 +44,50 @@
 
       <div>
         <div class="list_window">
-          <ul id='itemsList'>
-            <li>Learn Javascript</li>
-            <hr>
-            <li>Learn Bootstrap</li>
-            <hr>
-            <li>Learn React</li>
-            <hr>
-            <li>Learn HTML</li>
-            <hr>
-            <li>Learn CSS</li>
-            <hr>
-          </ul>
+          <div class="container justify-content-around align-content-center">
+            <ul id='itemsList'>
+              <li>Learn Javascript</li>
+              <hr>
+              <li>Learn Bootstrap</li>
+              <hr>
+              <li>Learn React</li>
+              <hr>
+              <li>Learn HTML</li>
+              <hr>
+              <li>Learn CSS</li>
+              <hr>
+            </ul>
+          </div>
+          <div class="col">
+            <button class="btn btn-secondary" id="clearButton">Clear All</button>
+          </div>
         </div>
       </div>
+
+
+
+
+
     </div>
-
-
-
-
-  </div>
-  <!-- 
+    <!-- 
       </div>      -->
 
-  <footer class="footer_custom bg-light drop_shadow_footer">
-    <div class="container-fluid">
-      <span class="text-dark center_me">A project by Arno - Dipali - Robert</span>
-    </div>
-  </footer>
+    <footer class="footer_custom bg-light drop_shadow_footer">
+      <div class="container-fluid">
+        <span class="text-dark center_me">A project by Arno - Dipali - Robert</span>
+      </div>
+    </footer>
 
 
 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
-    integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
-    integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
-    crossorigin="anonymous"></script>
-  <script src="./js/bootstrap.min.js"></script>
-  <script src="./js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+      integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+      integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+      crossorigin="anonymous"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/index.js"></script>
 
 </body>
 
